clusters/cluster0/kubernetes/apps/network/wireguard/app/wireguard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wireguard
  namespace: wireguard
  annotations:
    external-dns.alpha.kubernetes.io/hostname: gregbob.net
spec:
  ingressClassName: external
  rules:
  - host: wireguard.gregbob.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: wireguard
            port:
              number: 31820
